force-app/main/default/objects/Answers__c/Answers__c.object-meta.xml
<CustomObject>
    <label>Resposta</label>
    <nameField>
        <displayFormat>A-{0}</displayFormat>
        <label>Numero da Resposta</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Respostas</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>