force-app/main/default/objects/Answers__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <label>Descrição</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>