force-app/main/default/objects/Answers__c/fields/IsCorrectAnswer__c.field-meta.xml
<CustomField>
    <fullName>IsCorrectAnswer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>É a resposta correta?</label>
    <type>Checkbox</type>
</CustomField>