force-app/main/default/objects/Answers__c/fields/Question__c.field-meta.xml
<CustomField>
    <fullName>Question__c</fullName>
    <label>Questão</label>
    <referenceTo>Questions__c</referenceTo>
    <relationshipLabel>Respostas</relationshipLabel>
    <relationshipName>Answers</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>